application/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codbex-ecommerce-database
  namespace: prod
  labels:
    app: codbex-ecommerce-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codbex-ecommerce-database
  template:
    metadata:
      labels:
        app: codbex-ecommerce-database
    spec:
      serviceAccountName: codbex-ecommerce-sa
      containers:
        - name: postgres
          image: postgres:17
          volumeMounts:
          - name: codbex-ecommerce-database-volume
            mountPath: /var/lib/postgresql/data
          ports:
            - name: jdbc
              containerPort: 5432
              protocol: TCP
      volumes:
        - name: codbex-ecommerce-database-volume
          persistentVolumeClaim:
            claimName: codbex-ecommerce-database-claim
---
apiVersion: v1
kind: Service
metadata:
  name: codbex-ecommerce-database
  namespace: prod
  labels:
    app: codbex-ecommerce-database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: jdbc
      protocol: TCP
      name: jdbc
  selector:
    app: codbex-ecommerce-database
---
# e-Commerce - Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codbex-ecommerce
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codbex-ecommerce
  template:
    metadata:
      labels:
        app: codbex-ecommerce
    spec:
      containers:
        - name: codbex-ecommerce
          image: ghcr.io/codbex/codbex-ecommerce:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: codbex-ecommerce-documents-volume
            mountPath: /target/dirigible/cms/
          resources:
            requests:
              memory: "0.25Gi"
              cpu: "0.125"
            limits:
              memory: "4Gi"
              cpu: "2"
          ports:
            - name: http
              containerPort: 80
      volumes:
        - name: codbex-ecommerce-documents-volume
          persistentVolumeClaim:
            claimName: codbex-ecommerce-documents-claim
---
apiVersion: v1
kind: Service
metadata:
  name: codbex-ecommerce
  namespace: prod
  labels:
    app: codbex-ecommerce
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
  selector:
    app: codbex-ecommerce
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: codbex-ecommerce
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce.eu1.codbex.com
      http:
        paths:
          - backend:
              service:
                name: codbex-ecommerce
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ecommerce.eu1.codbex.com
      secretName: codbex-ecommerce-tls-secret
